--- a/treasure.html
+++ b/treasure.html
@@ -24,39 +24,64 @@
   <p id="score" style="padding:10px;text-align: center;">Score is unknown.</p>
   <p id="help" style="padding:10px;text-align: center;">Help report</p>
   <div class="row" style="padding-left: 400px;">
-    <div id="img1" class="col-md-2"><img onclick = "check(0)" id="image0" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
-    <div class="col-md-2"><img onclick = "check(1)" id="image1" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
-    <div class="col-md-2"><img onclick = "check(2)" id="image2" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
-    <div class="col-md-2"><img onclick = "check(3)" id="image3" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
-    <div class="col-md-2"><img onclick = "check(4)" id="image4" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
+    <div id="img1" class="col-md-2"><img onclick="check(0)" id="image0" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(1)" id="image1" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(2)" id="image2" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(3)" id="image3" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(4)" id="image4" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
   </div>
   <div class="row" style="padding-left: 400px;">
-    <div class="col-md-2"><img onclick = "check(5)" id="image5" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
-    <div class="col-md-2"><img onclick = "check(6)" id="image6" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
-    <div class="col-md-2"><img onclick = "check(7)" id="image7" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
-    <div class="col-md-2"><img onclick = "check(8)" id="image8" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
-    <div class="col-md-2"><img onclick = "check(9)" id="image9" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(5)" id="image5" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(6)" id="image6" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(7)" id="image7" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(8)" id="image8" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(9)" id="image9" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
   </div>
   <div class="row" style="padding-left: 400px;">
-    <div class="col-md-2"><img onclick = "check(10)" id="image10" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
-    <div class="col-md-2"><img onclick = "check(11)" id="image11" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
-    <div class="col-md-2"><img onclick = "help()" id="image12" src="help.jpg" alt="help" style="width: 150px;height:110px;"></div>
-    <div class="col-md-2"><img onclick = "check(13)" id="image13" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
-    <div class="col-md-2"><img onclick = "check(14)" id="image14" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(10)" id="image10" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(11)" id="image11" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="help()" id="image12" src="help.jpg" alt="help"
+        style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(13)" id="image13" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(14)" id="image14" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
   </div>
   <div class="row" style="padding-left: 400px;">
-    <div class="col-md-2"><img onclick = "check(15)" id="image15" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
-    <div class="col-md-2"><img onclick = "check(16)" id="image16" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
-    <div class="col-md-2"><img onclick = "check(17)" id="image17" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
-    <div class="col-md-2"><img onclick = "check(18)" id="image18" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
-    <div class="col-md-2"><img onclick = "check(19)" id="image19" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(15)" id="image15" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(16)" id="image16" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(17)" id="image17" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(18)" id="image18" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(19)" id="image19" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
   </div>
   <div class="row" style="padding-left: 400px;">
-    <div class="col-md-2"><img onclick = "check(20)" id="img20" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
-    <div class="col-md-2"><img onclick = "check(21)" id="img21" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
-    <div class="col-md-2"><img onclick = "check(22)" id="img22" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
-    <div class="col-md-2"><img onclick = "check(23)" id="img23" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
-    <div class="col-md-2"><img onclick = "check(24)" id="img24" src="tressure.jpg" alt="treasurebox" style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(20)" id="img20" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(21)" id="img21" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(22)" id="img22" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(23)" id="img23" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
+    <div class="col-md-2"><img onclick="check(24)" id="img24" src="tressure.jpg" alt="treasurebox"
+        style="width: 150px;height:110px;"></div>
   </div>
   <script>
     var ids = ["image0", "image1", "image2", "image3", "image4", "image5", "image6", "image7", "image8", "image9", "image10", "image11", "image12", "image13", "image14", "image15", "image16", "image17", "image18", "image19", "image20", "image21", "image22", "image23", "image24"]
@@ -118,6 +143,18 @@
         helptext = document.getElementById("help")
         helptext.innerHTML = "sorry, no help available"
       }
+
+
+    }
+    function reset() {
+      treasureLocation = Math.floor(Math.random() * 24)
+      var chestCount = 0
+      var score = 0
+      lastCheck = 5
+      chests = document.getElementById("chests")
+      chests.innerHTML = "Number of chests checked is " + chestCount
+      scoretext = document.getElementById("score")
+      scoretext.innerHTML = "Score is " + score
 
 
     }
